--- a/src/app/produits/produits.component.html
+++ b/src/app/produits/produits.component.html
@@ -5,48 +5,24 @@
 <table class="table">
   <thead>
     <tr>
-      <th scope="col">ID</th>
-      <th scope="col">Nom</th>
+      <th scope="col">CODE</th>
       <th scope="col">Marque</th>
-      <th scope="col">Quantité en stock</th>
-      <th scope="col">Prix</th>
+      <th scope="col">Caracteristiques</th>
+      <th scope="col">Prix Unitaire</th>
+      <th scope="col">Quantite</th>
+      <th scope="col"></th>
     </tr>
   </thead>
-  <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>Produit 1</td>
-      <td>Marque produit 1</td>
-      <td>15</td>
+  <tbody *ngIf="produits && produits.length > 0">
+    <tr *ngFor="let produit of produits">
+      <th scope="row">{{produit.code}}</th>     
+      <td>{{produit.marque}}</td>
+      <td>{{produit.modele}}</td>
+      <td>{{produit.caracteristiques}}</td>
+      <td>{{produit.prixUnitaire}}</td>
+      <td>{{produit.quantite}}</td>
       <td>
-        10.50
-      </td>
-    </tr>
-    <tr>
-    <th scope="row">2</th>
-      <td>Produit 2</td>
-      <td>Marque produit 2</td>
-      <td>150</td>
-      <td>
-        150.50
-      </td>
-    </tr>
-    <tr>
-    <th scope="row">3</th>
-      <td>Produit 3</td>
-      <td>Marque produit 3</td>
-      <td>141</td>
-      <td>
-        10.25
-      </td>
-    </tr>
-    <tr>
-    <th scope="row">4</th>
-      <td>Produit 4</td>
-      <td>Marque produit 4</td>
-      <td>150</td>
-      <td>
-        12.00
+        
       </td>
     </tr>
   </tbody>
