ajout produit backend connetion

--- a/src/app/produits/produits.component.html
+++ b/src/app/produits/produits.component.html
@@ -7,6 +7,7 @@
     <tr>
       <th scope="col">CODE</th>
       <th scope="col">Marque</th>
+      <th scope="col">Modèle</th>
       <th scope="col">Caracteristiques</th>
       <th scope="col">Prix Unitaire</th>
       <th scope="col">Quantite</th>
@@ -22,7 +23,7 @@
       <td>{{produit.prixUnitaire}}</td>
       <td>{{produit.quantite}}</td>
       <td>
-        
+
       </td>
     </tr>
   </tbody>
