--- a/src/app/ajout-produit/ajout-produit.component.html
+++ b/src/app/ajout-produit/ajout-produit.component.html
@@ -34,19 +34,29 @@
             
             <div class="mb-3 col-md-6">
               <label for="prixUnitaire" class="form-label">Prix unitaire</label>
-              <input type="text" [(ngModel)]="produit.prixUnitaire" class="form-control">
+              <input type="number" [(ngModel)]="produit.prixUnitaire" class="form-control">
             </div>
             <div class="mb-3 col-md-6">
               <label for="quantite" class="form-label">Quantité en stock</label>
-              <input type="text" [(ngModel)]="produit.prixUnitaire" class="form-control">
+              <input type="number" [(ngModel)]="produit.quantite" class="form-control">
             </div>
+            <div>
+              <label class="form-control-label" for="field_categorie">Categorie</label>
+                
+                <select [(ngModel)]="produit.categorie" (ngModelChange)="affecterCategorie($event)" class="form-control" name="categories">
+                  <option *ngFor="let c of categories; let i = index" (ngValue)="c" (click)="affecterCategorie(c)"> {{c.libelle}} </option>
+                </select>
+
+                
+            </div>
+
           </div>
-          
+          <hr>
           
           
           <div class="d-grid gap-2 d-md-flex justify-content-md-end">
             <button class="btn btn-default me-md-2" type="button">Anuuler</button>
-            <button class="btn btn-primary" type="button">Ajouter</button>
+            <button class="btn btn-primary" type="button" (click)="ajouterProduit()">Ajouter</button>
           </div>
     </div>
     
