--- a/src/app/ajout-produit/ajout-produit.component.html
+++ b/src/app/ajout-produit/ajout-produit.component.html
@@ -24,9 +24,15 @@
               <input type="text" [(ngModel)]="produit.modele" class="form-control">
             </div>
             <div class="mb-3 col-md-6">
-              <label for="caracteristiques" class="form-label">Caractèristique</label>
-              <input type="text" [(ngModel)]="produit.caracteristiques" class="form-control">
+              <label class="form-control-label" for="field_categorie">Categorie</label>
+                <select [ngModel]="categories" class="form-control"
+                    (ngModelChange)="affecterCategorie($event)">
+                    <option *ngFor=" let c of categories" [ngValue]="c">
+                        {{c.libelle}}
+                    </option>
+                </select>         
             </div>
+            
           </div>
             
           
@@ -40,14 +46,13 @@
               <label for="quantite" class="form-label">Quantité en stock</label>
               <input type="number" [(ngModel)]="produit.quantite" class="form-control">
             </div>
-            <div>
-              <label class="form-control-label" for="field_categorie">Categorie</label>
-                
-                <select [(ngModel)]="produit.categorie" (ngModelChange)="affecterCategorie($event)" class="form-control" name="categories">
-                  <option *ngFor="let c of categories; let i = index" (ngValue)="c" (click)="affecterCategorie(c)"> {{c.libelle}} </option>
-                </select>
+            
 
-                
+          </div>
+          <div class="row">
+            <div class="mb-3">
+              <label for="caracteristiques" class="form-label">Caractèristique</label>
+              <input type="text" [(ngModel)]="produit.caracteristiques" class="form-control">
             </div>
 
           </div>
