--- a/src/app/commandes/commandes.component.html
+++ b/src/app/commandes/commandes.component.html
@@ -1,6 +1,6 @@
 <br>
 <div class="d-flex justify-content-end">
-  <button type="button" class="btn btn-outline-primary" routerLink="/passer-commande">Passer comande</button>
+  <button type="button" class="btn btn-outline-primary" routerLink="/passer-commande">Nouvelle comande</button>
 </div>
 <table class="table">
   <thead>
