ajout produit backend connetion

--- a/src/app/produits/produits.component.html
+++ b/src/app/produits/produits.component.html
@@ -23,6 +23,10 @@
       <td>{{produit.prixUnitaire}}</td>
       <td>{{produit.quantite}}</td>
       <td>
+        <button class="btn btn-sm btn-primary" routerLink="/editer-produit/{{produit.id}}">Editer</button>
+      </td>
+      
+      <td>
 
       </td>
     </tr>
