fix bug navigation

--- a/src/app/ajout-commande/ajout-commande.component.html
+++ b/src/app/ajout-commande/ajout-commande.component.html
@@ -3,7 +3,7 @@
 <br>
 <div class="card col-md-10 offset-md-1">
     <div class="card-header">
-        <span>Nouvelle commande</span>
+        Nouvelle commande
 
         
     </div>
