--- a/src/app/ajout-produit/ajout-produit.component.html
+++ b/src/app/ajout-produit/ajout-produit.component.html
@@ -60,7 +60,7 @@
           
           
           <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-            <button class="btn btn-default me-md-2" type="button" (click)="annuler">Anuuler</button>
+            <button class="btn btn-default me-md-2" type="button" (click)="annuler()">Annuler</button>
             <button class="btn btn-primary" type="button" (click)="ajouterProduit()">Ajouter</button>
           </div>
     </div>
