--- a/src/app/edit-produit/edit-produit.component.html
+++ b/src/app/edit-produit/edit-produit.component.html
@@ -60,8 +60,8 @@
           
           
           <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-            <button class="btn btn-default me-md-2" type="button" (click)="annuler">Anuuler</button>
-            <button class="btn btn-primary" type="button" (click)="updateProduit()">Ajouter</button>
+            <button class="btn btn-default me-md-2" type="button" (click)="annuler()">Annuler</button>
+            <button class="btn btn-primary" type="button" (click)="updateProduit()">Mettre à jour</button>
           </div>
     </div>
     
